feat: initial crackode setup with SSG and organized src structure

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <meta name="keywords" content="algorithm cheat sheet, algorithm patterns, cracking the coding interview, leetcode patterns, coding interview prep, two pointers, sliding window, dynamic programming, graph algorithms, tree traversal, binary search, backtracking, Python Java Go" />
     <meta name="author" content="Mikheil Janiashvili" />
     <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://crackode.vercel.app/" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://crackode.dev/" />
+    <meta property="og:url" content="https://crackode.vercel.app/" />
     <meta property="og:title" content="Crackode — Algorithm Patterns & Cheat Sheets" />
     <meta property="og:description" content="40+ algorithm pattern templates in Python, Java, and Go. The ultimate cheat sheet for cracking coding interviews." />
 
